Fix dark mode edge cases (mainly with distill)

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,7 +4,6 @@
  ******************************************************************************/
 
 
-
 // Colors
 $red-color:           #FF3636 !default;
 $red-color-dark:      #B71C1C !default;
@@ -27,7 +26,13 @@ $yellow-color:        #efcc00 !default;
 $grey-color:          #828282 !default;
 $grey-color-light:    lighten($grey-color, 40%);
 $grey-color-dark:     darken($grey-color, 25%);
-$cod-grey-color:      #2c3237 !default;
 
 $white-color: #ffffff !default;
 $black-color: #000000 !default;
+
+
+// Theme colors
+
+$code-bg-color-light:     rgba($purple-color, 0.05);
+$code-bg-color-dark:      #2c3237 !default;
+
